# check_tipster

./: pyproject.toml  readme.md
csv/: imai.csv
src/: main.py
src/modules/: csv_reader.py  extraction_df.py  output_csv.py  plot.py
